outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval-8561815658026962885_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on local topology (clustering coefficient) and global path length, replacing the linear progress-based weighting. It combines nearest-neighbor selection with cluster-aware detour analysis, hub connectivity with betweenness centrality, and diversity encouragement using angular dispersion metrics.}
                                                                                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on local topology (clustering coefficient) and global path length, replacing the linear progress-based weighting. It combines nearest-neighbor selection with cluster-aware detour analysis, hub connectivity with betweenness centrality, and diversity encouragement using angular dispersion metrics.}
                                                                                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
